# biter-modding-library

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
extra/wrapper/: main.c
src/: error.rs  lib.rs
src/core/: inject.rs  injection.rs  logging.rs  mod.rs
tasks/: Cargo.toml
tasks/src/: _build.rs  _deploy.rs  _restore.rs  _run.rs  _setup.rs  fs.rs  main.rs
